# eth-hackathon-22-background

./: README.md
chatbot/: .gitignore  community.py  data_transformation.py  demofile2.txt  discord_bot.py  discord_message_document_gpt3.jsonl  embeddings.db  example_embeddings.py  makerdao_faq_document_gpt3.jsonl  pyproject.toml  raw_faq_data.csv  scratch.py  threshold.db
